added new photo avatar on top of portfolio

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 
 <body>
   <div class="header-container">
-    <h1>Lernantino</h1>
+    <h1>Md Tanvirul Islam</h1>
+    <img src="./assets/images/proimg.jpeg" alt="Islam" class="avatar">
     <!-- main logo / nav -->
 
     <header>
